Stylesheet/emote/tag updates 2013-04-11

--- a/source-css/cloudchasermotes.css
+++ b/source-css/cloudchasermotes.css
@@ -120,3 +120,53 @@ height:150px;
 background-repeat:no-repeat;
 background-image:url(%%ccwat%%);
 }
+
+a[href|="/ccblush"] {
+display:block;
+clear:none;
+float:left;
+width:150px;
+height:147px;
+background-repeat:no-repeat;
+background-image:url(%%ccblush%%);
+}
+
+a[href|="/ccshrug"] {
+display:block;
+clear:none;
+float:left;
+width:150px;
+height:141px;
+background-repeat:no-repeat;
+background-image:url(%%ccshrug%%);
+}
+
+a[href|="/ccsleep"] {
+display:block;
+clear:none;
+float:left;
+width:190px;
+height:127px;
+background-repeat:no-repeat;
+background-image:url(%%ccsleep%%);
+}
+
+a[href|="/ccshock"] {
+display:block;
+clear:none;
+float:left;
+width:120px;
+height:150px;
+background-repeat:no-repeat;
+background-image:url(%%ccshock%%);
+}
+
+a[href|="/highhoof"] {
+display:block;
+clear:none;
+float:left;
+width:250px;
+height:167px;
+background-repeat:no-repeat;
+background-image:url(%%highhoof%%);
+}
