--- a/source-css/marmemotes.css
+++ b/source-css/marmemotes.css
@@ -1073,7 +1073,7 @@ a[href|="/abhai"]
 {
     width: 153px;
 	height: 200px;
-    background-position: -110px -1400px;
+    background-position: -114px -1400px;
 }
 /* end sheet 7 */
 
@@ -1081,7 +1081,9 @@ a[href|="/abhai"]
 a[href|="/rapingtime"],
 a[href|="/awkwardhug"],
 a[href|="/fscry"],
-a[href|="/feels"]
+a[href|="/feels"],
+a[href|="/butchtrixie"],
+a[href|="/badonkadonk"]
 {
     display: block;
     clear: none;
@@ -1109,6 +1111,16 @@ a[href|="/feels"]
 {
 	width: 145px;
 	background-position: -374px -0px;
+}
+a[href|="/butchtrixie"]
+{
+	width: 137px;
+	background-position: -0px -140px;
+}
+a[href|="/badonkadonk"]
+{
+	width: 147px;
+	background-position: -137px -140px;
 }
 /* end sheet 8 */
 
@@ -1141,6 +1153,11 @@ a[href|="/wheels"]
 	width: 175px;
 	background-position: -0px -0px;
 }
+a[href|="/vymedic"]
+{
+	width: 175px;
+	background-position: -175px -0px;
+}
 a[href|="/applejackson"]
 {
 	width: 89px;
@@ -1160,6 +1177,11 @@ a[href|="/teipixelbuster"]
 {
 	width: 187px;
 	background-position: -0px -280px;
+}
+a[href|="/ajistiredofyourshit"]
+{
+	width: 187px;
+	background-position: -187px -280px;
 }
 a[href|="/bpdemo"]
 {
