--- a/source-css/mlplounge.css
+++ b/source-css/mlplounge.css
@@ -169,7 +169,8 @@ div.over18 .entry .buttons .first{padding-left: 0px}
  clear:both;
  text-align:center;
  width:100%;
- background-image:url(%%sbstare-paint%%);
+/*Sweetie Belle Stare by FinalFlutter*/
+ background-image:url(%%sbstare-shading%%);
  background-repeat:no-repeat;
  margin-bottom:-30px;
  background-position: 50% 100%;
