--- a/source-css/pinkquisition.css
+++ b/source-css/pinkquisition.css
@@ -380,6 +380,14 @@ a[href|="/pphithere"] {
     height: 150px;
     background-image: url(%%pphithere%%) 
     }
+a[href|="/fillybraesad"] {
+    display: block;
+    clear: none;
+    float: left;
+    width: 114px;
+    height: 150px;
+    background-image: url(%%fillybraesad%%) 
+    }
 
 /*Side Bar*/
 
