--- a/source-css/seriouslyluna.css
+++ b/source-css/seriouslyluna.css
@@ -831,6 +831,14 @@ a[href|="/cheeriflatter"] {
     height: 137px;
     background-image:url(%%cheeriflatter%%)
     }
+a[href|="/cheericmon"] {
+    display: block;
+    clear: none;
+    float: left;
+    width: 103px;
+    height: 123px;
+    background-image:url(%%cheericmon%%)
+    }
 a[href|="/cheeriwhatisthistrash"] {
     display: block;
     clear: none;
