--- a/source-css/tacoshy.css
+++ b/source-css/tacoshy.css
@@ -54,6 +54,16 @@ ________________________________________________▓▓▓▓▓▓▓
 
 /*------------ User Emotes ------------------*/
 
+a[href|="/tacobutt"] {
+    background-position: 0px 0px;
+    display: block;
+    clear: none;
+    float: left;
+    width: 294px;
+    height: 250px;
+    background-image: url(%%tacobutt%%)
+}
+
 a[href|="/tacodance"] {
     background-position: 0px 0px;
     display: block;
