Stylesheet/emote/tag updates 2013-04-13

--- a/source-css/anotherponymotessub.css
+++ b/source-css/anotherponymotessub.css
@@ -218,3 +218,13 @@ Width: 160px;
 Height: 191px;
 background-image: url(%%slightlyterrifying%%) !important
 }
+
+a[href="/derpyfilly"] {
+background-position: 0px 0px;
+Display: block;
+Clear: none;
+Float: left;
+Width: 200px;
+Height: 266px;
+background-image: url(%%derpyfilly%%) !important
+}
