--- a/source-css/mlploungesteamgroup.css
+++ b/source-css/mlploungesteamgroup.css
@@ -380,6 +380,7 @@ a.author[href$="duruz"]:after,
 a.author[href$="moonomnom"]:after,
 a.author[href$="MotharChoddar"]:after,
 a.author[href$="Dwarflord"]:after,
+a.author[href$="sna_fu_bar"]:after,
 a.author[href$="starkinmn"]:after
 
 {   border-radius: 4px;
@@ -393,6 +394,7 @@ a.author[href$="starkinmn"]:after
 
 /*Extra text here, add spaces so it looks nice*/
 a.author[href$="Sangfroidish"]:after { content:" Shoehorn Sexpert "}
+a.author[href$="sna_fu_bar"]:after {content:" Sneaky squid "}
 a.author[href$="DoomedCivilian"]:after { content:" CSS Breaker "}
 a.author[href$="Draze"]:after { content: " Giddy Up "}
 a.author[href$="duruz"]:after { content: " Doesn't oil up "}
