--- a/source-css/onetrueprincess.css
+++ b/source-css/onetrueprincess.css
@@ -128,8 +128,8 @@ background:transparent!important;
 
 /* GIANT SIDEBAR MESS ======================================================================================*/
 
-div.titlebox span.word { display: none }
-div.titlebox span.number:after { content: " Ploungers" }
+div.titlebox span.word { display: none }  
+div.titlebox span.number:after { content: " Ploungers" } 
 .side form#search {
     position: relative;
     z-index: 9999;
@@ -298,13 +298,13 @@ a[href|='/shining4']{ background-position: -0px -948px; width: 163px; height: 19
 a[href|='/shiningheil']{ background-position: -0px -558px; width: 150px; height: 180px; }
 a[href|='/armorarmor']{ background-position: -0px -1147px; width: 150px; height: 166px; }
 a[href|='/shining3']{ background-position: -150px -1147px; width: 150px; height: 150px; }
-a[href|='/shininghottie']{ background-position: -150px -1297px; width: 150px; height: 150px; }
+a[href|='/shininghottie']{ background-position: -150px -1297px; width: 149px; height: 150px; }
 a[href|='/donttellmywife']{ background-position: -0px -1313px; width: 150px; height: 138px; }
 a[href|='/shining1']{ background-position: -150px -1447px; width: 150px; height: 128px; }
-a[href|='/shining2']{ background-position: -0px -1451px; width: 150px; height: 124px; }
+a[href|='/shining2']{ background-position: -0px -1451px; width: 150px; height: 123px; }
 a[href|='/shiningheythere']{ background-position: -0px -1575px; width: 150px; height: 122px; }
-a[href|='/shininghugs']{ background-position: -150px -1575px; width: 150px; height: 118px; }
-a[href|='/shiningderp']{ background-position: -150px -1693px; width: 150px; height: 112px; }
+a[href|='/shininghugs']{ background-position: -150px -1576px; width: 150px; height: 118px; }
+a[href|='/shiningderp']{ background-position: -150px -1693px; width: 150px; height: 111px; }
 a[href|='/shiningcuddle']{ background-position: -0px -1697px; width: 150px; height: 99px; }
 
 a[href|='/ajcozy'], a[href|='/pinkiecozy'], a[href|='/twicozy'], a[href|='/dashcozy'], a[href|='/fluttercozy'], a[href|='/raritycozy'], a[href|='/derpycozy']{
@@ -323,7 +323,7 @@ a[href|='/raritycozy']{ background-position: -150px -384px; width: 150px; height
 a[href|='/derpycozy']{ background-position: -0px -575px; width: 150px; height: 190px; }
 
 
-a[href|='/raritywhythankyou'], a[href|='/notanapple'], a[href|='/flutterbraid'], a[href|='/zecoraback'], a[href|='/zecorawhat'], a[href|='/twiglaredown'], a[href|='/erispoint'], a[href|='/erisiscute'], a[href|='/zecoraup'], a[href|='/erispoint'], a[href|='/rarityworried'], a[href|='/dashfirenom'], a[href|='/flufflehop'], a[href|='/flufflefall'], a[href|='/zecoraspiders'], a[href|='/sweetiewhatthe'], a[href|='/zecoraflee'], a[href|='/miniluna'], a[href|='/scoottongue'], a[href|='/zecorahood'], a[href|='/zecoraeyes']{
+a[href|='/raritywhythankyou'], a[href|='/notanapple'], a[href|='/flutterbraid'], a[href|='/zecoraback'], a[href|='/zecorawhat'], a[href|='/twiglaredown'], a[href|='/erispoint'], a[href|='/erisiscute'], a[href|='/zecoraup'], a[href|='/erispoint'], a[href|='/rarityworried'], a[href|='/dashfirenom'], a[href|='/flufflehop'], a[href|='/flufflefall'], a[href|='/zecoraspiders'], a[href|='/sweetiewhatthe'], a[href|='/zecoraflee'], a[href|='/miniluna'], a[href|='/zecorahood'], a[href|='/zecoraeyes']{
     display: block;
     clear: none;
     float: left;
@@ -341,12 +341,24 @@ a[href|='/erisiscute']{ background-position: -0px -1340px; width: 93px; height: 
 a[href|='/zecoraup']{ background-position: -0px -1490px; width: 150px; height: 150px;  }
 a[href|='/rarityworried']{ background-position: -0px -1640px; width: 150px; height: 150px; }
 a[href|='/dashfirenom']{ background-position: -0px -1790px; width: 150px; height: 148px; }
-a[href|='/flufflehop']{ background-position: -0px -1938px; width: 150px; height: 146px; }
-a[href|='/flufflefall']{ background-position: -0px -2084px; width: 150px; height: 138px; }
+a[href|='/flufflehop']{ background-position: -0px -1938px; width: 149px; height: 146px; }
+a[href|='/flufflefall']{ background-position: -0px -2084px; width: 150px; height: 136px; }
 a[href|='/zecoraspiders']{ background-position: -0px -2222px; width: 150px; height: 135px; }
 a[href|='/sweetiewhatthe']{ background-position: -0px -2357px; width: 100px; height: 132px; }
-a[href|='/zecoraflee']{ background-position: -0px -2489px; width: 150px; height: 127px; }
-a[href|='/miniluna']{ background-position: -0px -2616px; width: 150px; height: 113px; }
-a[href|='/scoottongue']{ background-position: -0px -2729px; width: 150px; height: 111px; }
-a[href|='/zecorahood']{ background-position: -0px -2840px; width: 150px; height: 99px; }
+a[href|='/zecoraflee']{ background-position: -0px -2489px; width: 149px; height: 127px; }
+a[href|='/miniluna']{ background-position: 2px -2616px; width: 150px; height: 113px; }
+a[href|='/zecorahood']{ background-position: -0px -2840px; width: 150px; height: 98px; }
 a[href|='/zecoraeyes']{ background-position: -0px -2939px; width: 150px; height: 98px;  }
+
+a[href='/scoottongue']{
+    display: block;
+    clear: none;
+    float: left;
+    background-image: url(%%ss3%%)
+    }
+a[href|='/scoottongue']{ background-position: -0px -2729px; width: 150px; height: 111px; }
+
+
+
+
+
