--- a/source-css/mylittlepony.css
+++ b/source-css/mylittlepony.css
@@ -117,10 +117,10 @@ div.titlebox .users-online span.number:after {content:" Learning about Friendshi
 {
  display:inline-block;
  float:right;
- background:url(%%DaringHat%%);
- width:63px;
- height:61px;
- margin-top:-36px;
+ background:url(%%discentia-hat%%);
+ width:60px;
+ height:60px;
+ margin-top:-35px;
  margin-left:4px;
  margin-bottom:-14px;
  margin-right:-40px;
