--- a/source-css/pinkquisition.css
+++ b/source-css/pinkquisition.css
@@ -84,6 +84,196 @@ border-bottom:1px solid white
 
 
 
+a[href|="/cakeshake"] {
+    display: block;
+    clear: none;
+    float: left;
+    width: 150px;
+    height: 199px;
+	background-position: -0px -0px;
+    background-image: url(%%spritesheet1%%) !important
+    }
+a[href|="/ccserene"] {
+    display: block;
+    clear: none;
+    float: left;
+    width: 150px;
+    height: 107px;
+	background-position: -150px -0px;
+    background-image: url(%%spritesheet1%%) !important
+    }
+
+a[href|="/chibivinyl"] {
+    display: block;
+    clear: none;
+    float: left;
+    width: 150px;
+    height: 143px;
+	background-position: -300px -0px;
+    background-image: url(%%spritesheet1%%) !important
+    }
+
+a[href|="/crossmyheart"] {
+    display: block;
+    clear: none;
+    float: left;
+    width: 150px;
+    height: 150px;
+	background-position: -450px -0px;
+    background-image: url(%%spritesheet1%%) !important
+    }
+
+a[href|="/crylestia"] {
+    display: block;
+    clear: none;
+    float: left;
+    width: 150px;
+    height: 150px;
+	background-position: -600px -0px;
+    background-image: url(%%spritesheet1%%) !important
+    }
+
+a[href|="/fillyglaze"] {
+    display: block;
+    clear: none;
+    float: left;
+    width: 149px;
+    height: 150px;
+	background-position: -750px -0px;
+    background-image: url(%%spritesheet1%%) !important
+    }
+
+a[href|="/fillytombstone"] {
+    display: block;
+    clear: none;
+    float: left;
+    width: 149px;
+    height: 150px;
+	background-position: -0px -199px;
+    background-image: url(%%spritesheet1%%) !important
+    }
+
+a[href|="/happycamperfun"] {
+    display: block;
+    clear: none;
+    float: left;
+    width: 200px;
+    height: 128px;
+	background-position: -149px -199px;
+    background-image: url(%%spritesheet1%%) !important
+    }
+
+a[href|="/inmyeye"] {
+    display: block;
+    clear: none;
+    float: left;
+    width: 135px;
+    height: 150px;
+	background-position: -349px -199px;
+    background-image: url(%%spritesheet1%%) !important
+    }
+
+a[href|="/pinkiebow"] {
+    display: block;
+    clear: none;
+    float: left;
+    width: 150px;
+    height: 143px;
+	background-position: -484px -199px;
+    background-image: url(%%spritesheet1%%) !important
+    }
+
+a[href|="/pinkiefire"] {
+    display: block;
+    clear: none;
+    float: left;
+    width: 150px;
+    height: 111px;
+	background-position: -634px -199px;
+    background-image: url(%%spritesheet1%%) !important
+    }
+
+a[href|="/pinkiepresent"] {
+    display: block;
+    clear: none;
+    float: left;
+    width: 150px;
+    height: 136px;
+	background-position: -784px -199px;
+    background-image: url(%%spritesheet1%%) !important
+    }
+
+a[href|="/pinkqistodian"] {
+    display: block;
+    clear: none;
+    float: left;
+    width:150px; height:150px; background-position: -0px -349px;
+    background-image: url(%%spritesheet1%%) !important
+    }
+
+a[href|="/ppsaywaat"] {
+    display: block;
+    clear: none;
+    float: left;
+    width:102px; height:150px; background-position: -150px -349px;
+    background-image: url(%%spritesheet1%%) !important
+    }
+
+a[href|="/ppsecret"] {
+    display: block;
+    clear: none;
+    float: left;
+    width:149px; height:150px; background-position: -252px -349px;
+    background-image: url(%%spritesheet1%%) !important
+    }
+
+a[href|="/ppwhatsup"] {
+    display: block;
+    clear: none;
+    float: left;
+    width:150px; height:110px; background-position: -401px -349px; 
+    background-image: url(%%spritesheet1%%) !important
+    }
+
+a[href|="/ppthumb"] {
+    display: block;
+    clear: none;
+    float: left;
+    width:150px; height:127px; background-position: -551px -349px;
+    background-image: url(%%spritesheet1%%) !important
+    }
+
+a[href|="/schooliepie"] {
+    display: block;
+    clear: none;
+    float: left;
+    width:150px; height:118px; background-position: -701px -349px;
+    background-image: url(%%spritesheet1%%) !important
+    }
+
+a[href|="/tenthgear"] {
+    display: block;
+    clear: none;
+    float: left;
+    width:99px; height:150px; background-position: -851px -349px; 
+    background-image: url(%%spritesheet1%%) !important
+    }
+
+a[href|="/totheface"] {
+    display: block;
+    clear: none;
+    float: left;
+    width:200px; height:100px; background-position: -0px -499px;
+    background-image: url(%%spritesheet1%%) !important
+    }
+
+a[href|="/vinylchibi"] {
+    display: block;
+    clear: none;
+    float: left;
+    width:150px; height:150px; background-position: -200px -499px;
+    background-image: url(%%spritesheet1%%) !important
+    }
 a[href|="/chibitavi"] {
     display: block;
     clear: none;
@@ -132,14 +322,7 @@ a[href|="/rgivemeyourpants"] {
     height: 150px;
     background-image: url(%%rgivemeyourpants%%) !important
     }
-a[href|="/cakeshake"] {
-    display: block;
-    clear: none;
-    float: left;
-    width: 150px;
-    height: 199px;
-    background-image: url(%%cakeshake%%) !important
-    }
+
 a[href|="/pinkiesquiggle"] {
     display: block;
     clear: none;
@@ -156,14 +339,7 @@ a[href|="/steampink"] {
     height: 150px;
     background-image: url(%%steampink%%) !important
     }
-a[href|="/totheface"] {
-    display: block;
-    clear: none;
-    float: left;
-    width: 200px;
-    height: 113px;
-    background-image: url(%%totheface%%) !important
-    }
+
 a[href|="/zoeylee"] {
     display: block;
     clear: none;
@@ -172,62 +348,7 @@ a[href|="/zoeylee"] {
     height: 150px;
     background-image: url(%%zoilee%%) !important
     }
-a[href|="/fillyglaze"] {
-    display: block;
-    clear: none;
-    float: left;
-    width: 149px;
-    height: 150px;
-    background-image: url(%%fillyglaze%%) !important
-    }
-a[href|="/fillytombstone"] {
-    display: block;
-    clear: none;
-    float: left;
-    width: 149px;
-    height: 150px;
-    background-image: url(%%fillytombstone%%) !important
-    }
-a[href|="/pinkiepresent"] {
-    display: block;
-    clear: none;
-    float: left;
-    width: 150px;
-    height: 136px;
-    background-image: url(%%pinkiepresent%%) !important
-    }
-a[href|="/schooliepie"] {
-    display: block;
-    clear: none;
-    float: left;
-    width: 150px;
-    height: 118px;
-    background-image: url(%%schooliepie%%) !important
-    }
-a[href|="/pinkiefire"] {
-    display: block;
-    clear: none;
-    float: left;
-    width: 150px;
-    height: 111px;
-    background-image: url(%%pinkiefire%%) !important
-    }
-a[href|="/crossmyheart"] {
-    display: block;
-    clear: none;
-    float: left;
-    width: 150px;
-    height: 150px;
-    background-image: url(%%crossmyheart%%) !important
-    }
-a[href|="/inmyeye"] {
-    display: block;
-    clear: none;
-    float: left;
-    width: 135px;
-    height: 150px;
-    background-image: url(%%inmyeye%%) !important
-    }
+
 a[href|="/pperpsweat"] {
     display: block;
     clear: none;
@@ -236,14 +357,7 @@ a[href|="/pperpsweat"] {
     height: 97px;
     background-image: url(%%pperpsweat%%) !important
     }
-a[href|="/pinkiebow"] {
-    display: block;
-    clear: none;
-    float: left;
-    width: 150px;
-    height: 143px;
-    background-image: url(%%pinkiebow%%) !important
-    }
+
 a[href|="/ppholmes"] {
     display: block;
     clear: none;
@@ -252,30 +366,7 @@ a[href|="/ppholmes"] {
     height: 147px;
     background-image: url(%%ppholmes%%) !important
     }
-a[href|="/ppwhatsup"] {
-    display: block;
-    clear: none;
-    float: left;
-    width: 150px;
-    height: 110px;
-    background-image: url(%%pptempname%%) !important
-    }
-a[href|="/crylestia"] {
-    display: block;
-    clear: none;
-    float: left;
-    width: 150px;
-    height: 150px;
-    background-image: url(%%crylestia%%) !important
-    }
-a[href|="/tenthgear"] {
-    display: block;
-    clear: none;
-    float: left;
-    width: 99px;
-    height: 150px;
-    background-image: url(%%tenthgear%%) !important
-    }
+
 a[href|="/pinkiebyzero"] {
     display: block;
     clear: none;
@@ -292,46 +383,7 @@ a[href|="/ppsaywhat"] {
     height: 150px;
     background-image: url(%%ppsaywhat%%) !important
     }
-a[href|="/ppsaywaat"] {
-    display: block;
-    clear: none;
-    float: left;
-    width: 110px;
-    height: 150px;
-    background-image: url(%%ppsaywaat%%) !important
-    }
-a[href|="/chibivinyl"] {
-    display: block;
-    clear: none;
-    float: left;
-    width: 150px;
-    height: 143px;
-    background-image: url(%%chibivinyl%%) !important
-    }
-a[href|="/vinylchibi"] {
-    display: block;
-    clear: none;
-    float: left;
-    width: 150px;
-    height: 150px;
-    background-image: url(%%vinylchibi%%) !important
-    }
-a[href|="/happycamperfun"] {
-    display: block;
-    clear: none;
-    float: left;
-    width: 200px;
-    height: 128px;
-    background-image: url(%%happycamperfun%%) !important
-    }
-a[href|="/ppsecret"] {
-    display: block;
-    clear: none;
-    float: left;
-    width: 149px;
-    height: 150px;
-    background-image: url(%%ppsecret%%) !important
-    }
+
 a[href|="/incomingfun"] {
     display: block;
     clear: none;
@@ -348,30 +400,7 @@ a[href|="/pinkieweight"] {
     height: 159px;
     background-image: url(%%pinkieweight%%) 
     }
-a[href|="/ppthumb"] {
-    display: block;
-    clear: none;
-    float: left;
-    width: 150px;
-    height: 127px;
-    background-image: url(%%ppthumb%%) 
-    }
-a[href|="/pinkqistodian"] {
-    display: block;
-    clear: none;
-    float: left;
-    width: 150px;
-    height: 150px;
-    background-image: url(%%pinkqistodian%%) 
-    }
-a[href|="/ccserene"] {
-    display: block;
-    clear: none;
-    float: left;
-    width: 150px;
-    height: 107px;
-    background-image: url(%%ccserene%%) 
-    }
+
 a[href|="/pphithere"] {
     display: block;
     clear: none;
