--- a/source-css/vinylscratch.css
+++ b/source-css/vinylscratch.css
@@ -172,6 +172,10 @@ body.res-nightmode:first-of-type {background-color: transparent!important;}
 /*---------------------------- Scrolly sidebar thing --------------------------------------*/
 body
 
+h3{
+    font-size: 150%;
+}
+
 .side a[href="http://www.reddit.com/r/pinkiepie/new"] {
     display: block;
     height: 110px;
@@ -535,13 +539,6 @@ a[href|='/shrug'],a[href|="/vsshrug"],a[href|='/tableflip'],a[href|='/vslaying']
     background-image: url(%%vssheet%%) !important
     }
 
-a[href|='/vspuppy'],a[href|='/vssuave'],a[href|='/vsexcited'],a[href|='/vsdance2'],a[href|='/vsgrump'],a[href|='/vstears'],a[href|='/vssinep'],a[href|='/kixandra'],a[href|='/vsholyshit'],a[href|='/vsfacehoof'],a[href|='/vssrs'],a[href|='/vssoawesome'],a[href|='/vssupersad'],a[href|='/vssmug'],a[href|='/vysmug'],a[href|='/vsdontask'],a[href|='/modstar'],a[href|='/vssmile'],a[href|='/vsdrunk'],a[href|='/vshipster'],a[href|='/vs0b'],a[href|='/vs2b'],a[href|='/vs0c'],a[href|='/vs1c'],a[href|='/vs2c'],a[href|='/vs0d'],a[href|='/vs1d'],a[href|='/vs2d'],a[href|='/vs0e'],a[href|='/vs2e'],a[href|='/vs1e'],a[href|='/vs0e'] {
-    display: block;
-    clear: none;
-    float: left;
-    background-image: url(%%vssheet2%%) !important
-    }
-
 /* Sheet 1 */
 /* Non-charted Emotes */
 a[href|='/shrug'],a[href|="/vsshrug"] {width:250px; height:250px; background-position: -74px -2px}
@@ -591,6 +588,14 @@ a[href|='/vsboring'],a[href|='/vs28'] {width:70px; height:70px; background-posit
 a[href|='/vsheh'],a[href|='/vs29'] {width:67px; height:80px;background-position: -417px -749px}
 a[href|='/vsyes'],a[href|='/vs2a'] {width:70px; height:73px;background-position: 0px -765px}
 
+
+a[href|='/vspuppy'],a[href|='/vssuave'],a[href|='/vsexcited'],a[href|='/vsdance2'],a[href|='/vsgrump'],a[href|='/vstears'],a[href|='/vssinep'],a[href|='/kixandra'],a[href|='/vsholyshit'],a[href|='/vsfacehoof'],a[href|='/vssrs'],a[href|='/vssoawesome'],a[href|='/vssupersad'],a[href|='/vssmug'],a[href|='/vysmug'],a[href|='/vsdontask'],a[href|='/modstar'],a[href|='/vssmile'],a[href|='/vsdrunk'],a[href|='/vshipster'],a[href|='/vstiredofyourshit'],a[href|='/goddammitjoker'],a[href|='/vspride'],a[href|='/vsproud'],a[href|='/vscuter'],a[href|='/vswoah'],a[href|='/vshotdamn'],a[href|='/vsdance3'],a[href|='/vsno'],a[href|='/vsermergerd'],a[href|='/vs0b'],a[href|='/vs2b'],a[href|='/vs0c'],a[href|='/vs1c'],a[href|='/vs2c'],a[href|='/vs0d'],a[href|='/vs1d'],a[href|='/vs2d'],a[href|='/vs0e'],a[href|='/vs2e'],a[href|='/vs1e'],a[href|='/vs0e'],a[href|='/vs0f'],a[href|='/vs1f'],a[href|='/vs2f'] {
+    display: block;
+    clear: none;
+    float: left;
+    background-image: url(%%vssheet2%%) !important
+    }
+
 /* Sheet 2 */
 /* Non-charted Emotes */
 a[href|='/vspuppy'] {background-image: url(%%vssheet2%%);width:148px; height:145px;background-position: -145px 0px}
@@ -599,6 +604,10 @@ a[href|='/vsgrump'] {background-image: url(%%vssheet2%%);width:100px; height:104
 a[href|='/vssinep'],a[href|='/kixandra'] {background-image: url(%%vssheet2%%);width:200px; height:107px;background-position: -100px -305px}
 a[href|='/vsdontask'] {background-image: url(%%vssheet2%%);width:123px; height:100px;background-position: 0px -412px}
 a[href|='/modstar'] {background-image: url(%%vssheet2%%);width:250px; height:250px;background-position: -124px -412px}
+a[href|='/vstiredofyourshit'],a[href|='/goddammitjoker'] {background-image: url(%%vssheet2%%);width:100px; height:118px;background-position: -0px -578px}
+a[href|='/vsno'] {background-image: url(%%vssheet2%%);width:150px; height:127px;background-position: 0px -697px}
+a[href|='/vsdance3'] {background-image: url(%%vssheet2%%);width:145px; height:178px;background-position: 0px -825px}
+a[href|='/vswoah'],a[href|='/vshotdamn'] {background-image: url(%%vssheet2%%);width:100px; height:77px;background-position: -154px -663px}
 
 /* 0 Column */
 a[href|='/vssuave'],a[href|='/vs0b'] {background-image: url(%%vssheet2%%);width:70px; height:83px;background-position: -145px -145px}
@@ -606,17 +615,20 @@ a[href|='/vstears'],a[href|='/vs0c'] {background-image: url(%%vssheet2%%);width:
 a[href|='/vsholyshit'],a[href|='/vs0d'] {background-image: url(%%vssheet2%%);width:70px; height:80px; background-position: -300px -154px}
 a[href|='/vssmug'],a[href|='/vysmug'],a[href|='/vs0e'] {background-image: url(%%vssheet2%%);width:70px; height:70px; background-position: -370px 0px}
 a[href|='/vshipster'],a[href|='/vs0e'] {background-image: url(%%vssheet2%%);width:70px; height:72px; background-position: -370px -71px}
+a[href|='/vspride'],a[href|='/vsproud'],a[href|='/vs0f'] {background-image: url(%%vssheet2%%);width:70px; height:76px; background-position: -370px -284px}
 
 /* 1 Column */
 a[href|='/vsfacehoof'],a[href|='/vs1c'] {background-image: url(%%vssheet2%%);width:70px; height:71px;background-position: -300px 0px}
 a[href|='/vssrs'],a[href|='/vs1d'] {background-image: url(%%vssheet2%%);width:70px; height:63px;background-position: -300px -234px}
 a[href|='/vsdrunk'],a[href|='/vs1e'] {background-image: url(%%vssheet2%%);width:70px; height:68px;background-position: -370px -144px}
+a[href|='/vscuter'],a[href|='/vs1f'] {background-image: url(%%vssheet2%%);width:70px; height:64px;background-position: 0px -513px}
 
 /* 2 Column */
 a[href|='/vsdance2'],a[href|='/vs2b'] {background-image: url(%%vssheet2%%);width:70px; height:104px; background-position: -222px -145px}
 a[href|='/vssoawesome'],a[href|='/vs2c'] {background-image: url(%%vssheet2%%);width:70px; height:83px; background-position: -300px -71px}
 a[href|='/vssupersad'],a[href|='/vs2d'] {background-image: url(%%vssheet2%%);width:70px; height:70px; background-position: -300px -297px}
 a[href|='/vssmile'],a[href|='/vs2e'] {background-image: url(%%vssheet2%%);width:70px; height:70px; background-position: -370px -213px}
+a[href|='/vsermergerd'],a[href|='/vs2f'] {background-image: url(%%vssheet2%%);width:70px; height:77px; background-position: -370px -663px}
 
 /* Other Emotes*/
 a[href|='/vsdance'] { width:110px; height:110px; background-image: url(%%vsdance%%); display: block; clear: none; float: left; }
@@ -864,7 +876,6 @@ a.author[href$="AlisterDX"],
 a.author[href$="upvote_machine_1"],
 a.author[href$="Harakou"],
 a.author[href$="nightpony"],
-a.author[href$="Rahlyn"],
 a.author[href$="007ghg7"],
 a.author[href$="koobaxion"],
 a.author[href$="Vinyl__Scratch"]
@@ -898,7 +909,6 @@ a.author[href$="AlisterDX"]:before,
 a.author[href$="upvote_machine_1"]:before, 
 a.author[href$="Harakou"]:before,
 a.author[href$="nightpony"]:before,
-a.author[href$="Rahlyn"]:before,
 a.author[href$="007ghg7"]:before,
 a.author[href$="koobaxion"]:before,
 a.author[href$="Vinyl__Scratch"]:before
@@ -908,7 +918,7 @@ font-size:10px!important;
 visibility:visible!important;
 }
 
-/* Replacing somebody's name? Put the replacement or color here. */
+/* Replacing somebody's name? Put the replacement here. */
 
 a.author[href$="derram_2"]:before {content:"derramina Diane Pie"}
 a.author[href$=Chinch335]:before {content:"Chinchy"}
@@ -926,11 +936,10 @@ a.author[href$="Toklankitsune"]:before {content:"DJ T0ki"}
 a.author[href$="bryvood"]:before {content:"DJ Toaster Scratchaloo"}
 a.author[href$="otwem"]:before {content:"Otwem Scratch"}
 a.author[href$="Kireas"]:before {content:"Octavia"}
-a.author[href$="AlisterDX"]:before {content:"m8"}
-a.author[href$="upvote_machine_1"]:before {content:"il sok u m8"}
+a.author[href$="AlisterDX"]:before {content:"Star"}
+a.author[href$="upvote_machine_1"]:before {content:"XDretsilA"}
 a.author[href$="Harakou"]:before {content:"Taco Illuminati"}
 a.author[href$="nightpony"]:before {content:"DJ NightPon3"}
-a.author[href$="Rahlyn"]:before {content:"il"}
 a.author[href$="007ghg7"]:before {content:"fukn"}
 a.author[href$="koobaxion"]:before {content:"sok"}
 a.author[href$="Vinyl__Scratch"]:before {content:"u"}
